--- a/archives/templates/upload.html
+++ b/archives/templates/upload.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     {{ form.non_field_errors }}
 
-    {{ form.as_p }} {# включает: description, files, password*, max_downloads, expires_at #}
+    {{ form.as_p }}
 
     <button class="btn btn-primary" type="submit">Собрать ZIP</button>
 </form>
