--- a/archives/templates/upload.html
+++ b/archives/templates/upload.html
@@ -3,12 +3,76 @@
 {% block content %}
 <h3>Загрузить архив</h3>
 
-<form method="post" enctype="multipart/form-data" class="vstack gap-3">
+<form id="uploadForm" enctype="multipart/form-data" class="vstack gap-3">
     {% csrf_token %}
-    {{ form.non_field_errors }}
+    <div>
+        {{ form.description.label_tag }}
+        {{ form.description }}
+        {{ form.description.errors }}
+    </div>
+    <div>
+        {{ form.password1.label_tag }}
+        {{ form.password1 }}
+        {{ form.password1.errors }}
+    </div>
+    <div>
+        {{ form.password2.label_tag }}
+        {{ form.password2 }}
+        {{ form.password2.errors }}
+    </div>
+    <div>
+        {{ form.max_downloads.label_tag }}
+        {{ form.max_downloads }}
+        {{ form.max_downloads.errors }}
+    </div>
+    <div>
+        {{ form.files.label_tag }}
+        {{ form.files }}
+        {{ form.files.errors }}
+    </div>
 
-    {{ form.as_p }}
-
-    <button class="btn btn-primary" type="submit">Собрать ZIP</button>
+    <button id="submitBtn" class="btn btn-primary" type="submit">Собрать ZIP</button>
 </form>
+
+<progress id="uploadProgress" value="0" max="100" style="display:none; width:100%; margin-top:1rem;"></progress>
+
+<script>
+    (() => {
+        const form = document.getElementById("uploadForm");
+        const progress = document.getElementById("uploadProgress");
+
+        form.addEventListener("submit", e => {
+            e.preventDefault();
+            progress.style.display = "block";
+            progress.value = 0;
+
+            const data = new FormData(form);
+            const xhr = new XMLHttpRequest();
+            xhr.open("POST", "{% url 'upload' %}");
+            xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+
+            xhr.upload.onprogress = evt => {
+                if (evt.lengthComputable) {
+                    const pct = Math.round(evt.loaded / evt.total * 100);
+                    progress.value = pct;
+                }
+            };
+
+            xhr.onload = () => {
+                if (xhr.status === 302) {
+                    const redirectUrl = xhr.getResponseHeader("Location");
+                    window.location.href = redirectUrl;
+                } else {
+                    alert("Ошибка загрузки: " + xhr.status);
+                }
+            };
+
+            xhr.onerror = () => {
+                alert("Сетевая ошибка при загрузке");
+            };
+
+            xhr.send(data);
+        });
+    })();
+</script>
 {% endblock %}
