--- a/archives/templates/wait.html
+++ b/archives/templates/wait.html
@@ -1,30 +1,15 @@
 {% extends "base.html" %}
+{% load static %}
+
 {% block content %}
-<h3>Подождите, архив собирается…</h3>
+<h3>Пожалуйста, подождите, собираем ZIP…</h3>
 
 <progress id="buildProgress" value="0" max="100" style="width:100%;"></progress>
 
 <script>
-    (() => {
-        const progressUrlName = "wait-progress";
-        const progressUrl = "{% url 'wait-progress' archive.short_code %}";
-        const downloadUrl = "{% url 'download' archive.short_code %}";
-        const progressEl = document.getElementById("buildProgress");
-
-        const poll = () => {
-            fetch(progressUrl)
-                .then(r => r.json())
-                .then(data => {
-                    progressEl.value = data.pct;
-                    if (data.pct < 100) {
-                        setTimeout(poll, 1000);
-                    } else {
-                        window.location = downloadUrl;
-                    }
-                })
-                .catch(() => setTimeout(poll, 1000));
-        };
-        poll();
-    })();
+    window.progressUrl = "{% url 'wait-progress' archive.short_code %}";
+    window.downloadUrl = "{% url 'download' archive.short_code %}";
 </script>
+
+<script src="{% static 'js/wait.js' %}"></script>
 {% endblock %}
