--- a/archives/templates/wait.html
+++ b/archives/templates/wait.html
@@ -1,15 +1,25 @@
 {% extends "base.html" %}
-{% load static %}
-
 {% block content %}
-<h3>Пожалуйста, подождите, собираем ZIP…</h3>
-
+<h3>Архив собирается…</h3>
 <progress id="buildProgress" value="0" max="100" style="width:100%;"></progress>
 
 <script>
-    window.progressUrl = "{% url 'wait-progress' archive.short_code %}";
-    window.downloadUrl = "{% url 'download' archive.short_code %}";
-</script>
+    (() => {
+        const progressUrl = "{% url 'wait-progress' archive.short_code %}";
+        const downloadUrl = "{% url 'download' archive.short_code %}";
+        const bar = document.getElementById("buildProgress");
 
-<script src="{% static 'js/wait.js' %}"></script>
+        const poll = () => {
+            fetch(progressUrl)
+                .then(r => r.json())
+                .then(d => {
+                    bar.value = d.pct;
+                    if (d.pct < 100) setTimeout(poll, 1000);
+                    else window.location = downloadUrl;
+                })
+                .catch(() => setTimeout(poll, 1000));
+        };
+        poll();
+    })();
+</script>
 {% endblock %}
