--- a/archives/templates/wait.html
+++ b/archives/templates/wait.html
@@ -2,15 +2,16 @@
 {% block content %}
 <h3>Архив собирается…</h3>
 
-<progress id="buildProgress" value="0" max="100" style="width:100%;"></progress>
+<progress id="wait-progress" value="0" max="100" style="width:100%;"></progress>
 
 <script>
-    (() => {
+    (function () {
         const code = "{{ archive.short_code }}";
-        const bar = document.getElementById("buildProgress");
+        const progressUrl = `/wait/${code}/progress/`;
+        const bar = document.getElementById("wait-progress");
 
-        const poll = () => {
-            fetch(`/wait/${code}/progress/`)
+        function poll() {
+            fetch(progressUrl)
                 .then(r => r.json())
                 .then(d => {
                     bar.value = d.pct;
@@ -21,7 +22,7 @@
                     }
                 })
                 .catch(() => setTimeout(poll, 1000));
-        };
+        }
 
         poll();
     })();
