--- a/archives/templates/wait.html
+++ b/archives/templates/wait.html
@@ -7,7 +7,7 @@
 <script>
     (function () {
         const code = "{{ archive.short_code }}";
-        const progressUrl = `/wait/${code}/progress/`;
+        const progressUrl = "{% url 'wait-progress' archive.short_code %}";
         const bar = document.getElementById("wait-progress");
 
         function poll() {
@@ -18,7 +18,7 @@
                     if (d.pct < 100) {
                         setTimeout(poll, 1000);
                     } else {
-                        window.location = `/d/${code}/`;
+                        window.location = `/d/${code}/preview/`;
                     }
                 })
                 .catch(() => setTimeout(poll, 1000));
