--- a/archives/templates/download.html
+++ b/archives/templates/download.html
@@ -1,30 +1,15 @@
 {% extends "base.html" %}
-{% load humanize static custom_filters %}
+
+{% block title %}Скачать {{ archive.name }}{% endblock %}
 
 {% block content %}
-<h2>Архив {{ archive.short_code }}</h2>
-
-{% if archive.qr_image %}
-<div class="mb-4">
-    <img src="{{ archive.qr_image.url }}" alt="QR {{ archive.short_code }}" width="160">
-</div>
-{% endif %}
-
-{% if not archive.ready %}
-<div class="py-4 text-center">
-    <p>Пожалуйста, подождите, архив собирается…</p>
-</div>
-{% else %}
-<ul class="mb-4">
-    {% for item in files %}
-    <li>{{ item.file.name|basename }}</li>
-    {% endfor %}
-</ul>
-{% if not file_exists %}
-<p class="text-red-600">Файл удалён</p>
-{% endif %}
-<a href="{% url 'download-file' archive.short_code %}" class="btn btn-primary">
-    Скачать архив
-</a>
+<h1>Скачать архив «{{ archive.name }}»</h1>
+{% if archive.password %}
+<form method="get">
+    {% csrf_token %}
+    <label for="pw">Пароль</label>
+    <input id="pw" type="password" name="password" required>
+    <button type="submit">Скачать</button>
+</form>
 {% endif %}
 {% endblock %}
