--- a/archives/templates/preview.html
+++ b/archives/templates/preview.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
-{% load humanize static custom_filters %}
-
-{% block title %}Архив {{ archive.name }}{% endblock %}
-
 {% block content %}
-<h2>Архив {{ archive.short_code }}</h2>
+<h2>{{ archive.name }}</h2>
+{% if archive.description %}<p>{{ archive.description }}</p>{% endif %}
+
+{% if error %}<p style="color:red">{{ error }}</p>{% endif %}
+
+{% if archive.password and not has_access %}
+<form method="post">{% csrf_token %}
+    <label>Пароль: <input type="password" name="password"></label>
+    <button>Отправить</button>
+</form>
+{% else %}
 
 {% if archive.qr_image %}
 <img src="{{ archive.qr_image.url }}" width="160" alt="QR">
@@ -13,14 +19,15 @@
 {% if not archive.ready %}
 <p>Пожалуйста, подождите, архив собирается…</p>
 {% else %}
-<ul>
-    {% for f in files %}
-    <li>{{ f }}</li>
-    {% endfor %}
-</ul>
-{% if not file_exists %}
+{% if files %}
+<ul>{% for f in files %}<li>{{ f }}</li>{% endfor %}</ul>
+{% elif not file_exists %}
 <p class="text-red-600">Файл удалён</p>
 {% endif %}
-<a href="{% url 'download-file' archive.short_code %}">Скачать {{ archive.name }}.zip</a>
+
+<a href="{% url 'download-file' archive.short_code %}">
+    <button>Скачать {{ archive.name }}.zip</button>
+</a>
+{% endif %}
 {% endif %}
 {% endblock %}
